<resources>
    <string name="app_name">Wisdom Clinic</string>
    <string name="hello_world">Hello world</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Wisdom Clinic</string>
    <string name="title_activity_login">Login</string>
    <string name="text_welcome_login">Welcom Login</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_btn_login">Login Now</string>
    <string name="text_btn_register">Register Now</string>
    <string name="title_activity_register">Register</string>
    <string name="text_register_us">Register With Us</string>
    <string name="text_hint_fname">Full Name</string>
    <string name="text_hint_phone">Phone</string>
    <string name="text_hint_address">Address</string>
    <string name="text_hint_state">State</string>
    <string name="text_hint_country">Country</string>
    <string name="text_hint_city">City</string>
    <string name="text_hint_zipcode">Zipcode</string>
    <string name="text_hint_username">Username</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_profile_update">Profile Update</string>
    <string name="txt_order_details">Your Order Detail</string>
    <string name="txt_shop_by_category">Shop By Category</string>
    <string name="btn_place_order">Place Order</string>
    <string name="btn_checkout">Checkout</string>
    <string name="btn_buynow">Buy Now</string>
    <string name="txt_product">Product</string>
    <string name="txt_price">Price</string>
    <string name="txt_qty">Qty</string>
    <string name="txt_amount">Amount</string>
    <string name="txt_cas_delivery">Cash on delivery</string>
    <string name="txt_paypal">Paypal</string>
    <string name="txt_total_amount">Total Amount</string>
    <string name="txt_total_item">Total Items</string>
    <string name="txt_total_qty">Total Qty</string>
    <string name="text_btn_request_password">Request Password</string>
    <string name="btn_forgot_password_need">Need Password ?</string>
    <string name="title_activity_choose_service">Choose Service</string>
    <string name="title_activity_choose_time">Choose Time</string>
    <string name="title_activity_chooe_address">Choose Address</string>
    <string name="title_activity_choose_photo">Description</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_choose_city">ChooseCity</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_viewcart">View Cart</string>
    <string name="title_activity_product_detail">Product Detail</string>
    <string name="title_activity_productdetail">Product Detail</string>
    <string name="title_activity_checkout">Pick an address</string>
    <string name="title_activity_placeorder">Place Order</string>
    <string name="title_activity_order_detail">Order Detail</string>
    <string name="title_activity_order_complete">Thanks Order Complete</string>
    <string name="satisfaction_send">SEND</string>
    <string name="satisfaction_user">User Name*</string>
    <string name="satisfaction_Email">Email*</string>
    <string name="satisfaction_comment">Comment*</string>
    <string name="contactus_Phonenumber">Phone Number</string>
    <string name="contactus_Email">Email</string>
    <string name="Contactus_Website">Website</string>
    <string name="loading">Loading. Please Wait..</string>
    <string name="viewcartadapter_product_removed">Product Removed</string>
    <string name="internetconnection">Please connect mobile with working Internet</string>
    <string name="forgotactivity_mobile_no">Enter Mobile No</string>
    <string name="forgotactivity_enter_password">Enter Password</string>
    <string name="mainactivity_logout_sucessfull">Logout Sucessfull</string>
    <string name="mainactivity_mainactivity_are_exit">Are you sure you want to exit?</string>
    <string name="mainactivity_this_device">This device is not supported.</string>
    <string name="orderdetailactivity_order_cancle">Order Cancle Succesfull</string>
    <string name="placeorderactivity_max_purchase_order">Max Purchase Order</string>
    <string name="placeorderactivity_delivery_charge">Delivery Charge :</string>
    <string name="placeorderactivity_total_price"> Total Price : </string>
    <string name="placeorderactivity_total_item">Total Items :</string>
    <string name="placeorderactivity_error_parsing_data">Error parsing data</string>
    <string name="placeorderactivity_order_placed_succesfull">Order Placed Succesfull</string>
    <string name="placeorderactivity_product_added_to_cart">Product Added to Cart</string>
    <string name="productsActivity">selected_product</string>
    <string name="signupactivity_mobile_no">Enter Mobile No</string>
    <string name="signupactivity_enter_password">Enter Password</string>
    <string name="signupactivity_your_registration">Your registration is successful.</string>
    <string name="viewcartactivity_min_purchase_order">Min Purchase Order</string>
    <string name="viewcartactivity_please_order_minimum_of_amount">Please order Minimum of amount </string>
    <string name="viewcartactivity_max_purchase_order">Max Purchase Order</string>
    <string name="viewcartactivity_delivery_charge">Delivery Charge</string>
    <string name="viewcartactivity_total_price"> Total Price : </string>
    <string name="viewcartactivity_product_qty">Product Qty</string>
    <string name="viewcartactivity_qty">Qty</string>
    <string name="viewcartactivity_save">Save</string>
    <string name="viewcartactivity_cancel">Cancel</string>
    <string name="viewcartactivity_all_product_removed">All Product Removed...</string>
    <string name="myprofilefragment_your_profile_update_Succesfull">Your Profile Update Succesfull</string>
    <string name="password_not_matched">Password Not Matched</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Rs">\u20B9</string>
    <string name="earn">Earn \u20B9 10 and invite friends the will get \u20B9 50 when they sign up to Fresh Vegi</string>
    <string name="otp_text">We will send an SMS with a confirmation code to this number</string>
    <string name="faq">At Wisdom Clinic, we are dedicated to providing a seamless shopping experience to all our customers. To help guide you through your online shopping with us, we have compiled a list of frequently asked questions and provided answers below. If you don’t find your question, you are always welcome to contact us and we will get back to you as soon as possible.
</string>
    <string name="question1">Question: Can I know whether your Pharmacy is licensed?
</string>
    <string name="answer1">Answer: Certainly, we are a licensed pharmacy offering prescription medications online. Our license number: 00014/20/21/GZB-2015
</string>
    <string name="answer2">Answer: Our website/App is open 24 hours a day, 7 days a week. Call Centre support is available from Monday to Sunday, 08:00 am to 10:00 pm IST.
</string>
    <string name="answer3">Answer: At Wisdom Clinic, your privacy and security are extremely important to us. We are committed to protecting the confidentiality of your personal information (your name, address, email address or credit card information) and we never share them with any other person or company. It is used solely by our authorized  personnel to process your order. 
</string>
    <string name="answer4">Please note that all information provided to us is subject to doctor–patient privilege laws. Being compliant with PCI DSS Level 3, we use the latest electronic security measures and our servers are protected by secure firewalls to prevent unauthorized access to your personal data.
</string>
    <string name="question2">Question: What is Wisdom Clinic’s return and refund policy?
</string>
    <string name="answer5">Answer: At Wisdom Clinic, we do our best to ensure that you are completely satisfied with our products. And we are happy to issue a full refund based on the conditions listed below: 
</string>
    <string name="about_heading">Our Mission is to make healthcare understandable, accessible and affordable
</string>
    <string name="about1">We want you to understand the medicines that you take and that you give your loved ones.
</string>
    <string name="about2">Buying medicines may require you to try 5 medical stores which are miles apart. We want you to be able to do it with a click.
</string>
    <string name="about3">Medicines can be expensive. We want you to know about medicines which have the same composition as prescribed by your doctor but can be considerably cheaper.
</string>
    <string name="about4">Heavy traffic, lack of parking, monsoons, shop closed, forgetfulness… these are some of the reasons that could lead to skipping of vital medications. Since taking medicines regularly is a critical component of managing chronic medical conditions, it’s best not to run out of essential medicines. Just log on to Wisdom Clinic.co.in, Or Our App ,place your order online and have your medicines delivered to you – without leaving the comfort of your home.
</string>
    <string name="about5">What’s more, with easy access to reliable drug information, you get to know all about your medicine at netmeds.com, and once you’re a Wisdom Clinic customer, you’ll get regular refill reminders, so you’ll never again come up short of medicines.
</string>
    <string name="terms1">The following are the Terms and Conditions, read together with the Privacy Policy, that govern your purchase and use of the products and services (the "Products") from Wisdom Clinic, and constitute a legally binding agreement, between you ("the Customer", the "User" or "the Caregiver") and Wisdom Clinic a fully licensed Pharmacy. </string>
    <string name="terms2">
1.1 To use certain features of the Website (e.g., ordering Products, posting rating/reviews), you must set up an account with Wisdom Clinic ("Wisdom Clinic’s Account") and provide certain information about yourself as prompted by the Customer Information form, including, your name, gender, email address, account password, mobile phone number and billing/shipping address. All of your registration information is protected by our Privacy Policy.
</string>
    <string name="terms3">1.2 You represent and warrant that the information you submit during registration is truthful and accurate and that you will maintain the accuracy of such information.
</string>
    <string name="terms4">1.3 Your Wisdom Clinic  Account username and password are personal to you. You may not transfer your account and you will be responsible for the activities associated with your Wisdom Clinic Account.
</string>
    <string name="terms5">1.4 Wisdom Clinic will not be liable for any loss or damages as a result of your failure to maintain the confidentiality of your account credentials. If you suspect any unauthorized use of your Wisdom Clinic account, you shall immediately notify Wisdom Clinic team.
</string>
    <string name="terms6">1.5 It is your responsibility to keep your email address up-to-date on your account setup at Wisdom Clinic so that we can communicate with you electronically.
</string>
    <string name="terms2.1">2.2 We understand the privacy of all information you provide is of a primary importance. This is why we do everything possible to use it carefully and sensibly. This information is never shared with other companies or third party service providers.
</string>
</resources>