<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#e7f7ef"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
    <imgLoader.RoundedImageView
        android:layout_gravity="center"
       android:src="@drawable/logo_med"
       android:layout_width="200dp"
        android:layout_height="200dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >
            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:padding="5dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/editFname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_fname"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="7dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:padding="5dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_username"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="7dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:padding="5dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="7dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:padding="5dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_phone"
                android:inputType="phone"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" 
                android:focusable="false"
                />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="7dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:padding="5dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_address"
                android:inputType="textPostalAddress"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="7dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:padding="5dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/editZipcode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_zipcode"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="7dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:padding="5dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/editCity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_city"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
            </android.support.v7.widget.CardView>

            <Button
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:id="@+id/btnupadate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/xml_yellow_button"
                android:text="@string/btn_profile_update"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
