<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#410f9072"
    android:layout_height="match_parent"
    tools:context=".Service_CheckoutActivity" >

  <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="110dp">
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_marginTop="5dp"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:src="@drawable/camera_24dp"
        app:civ_border_width="1dp"
        app:civ_border_color="#bfbfbf"/>
    <android.support.v7.widget.RecyclerView
android:id="@+id/recyler_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:layout_toRightOf="@id/profile_image"
        ></android.support.v7.widget.RecyclerView>
</RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <EditText
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/service_editFname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="Name"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1" />
            <EditText
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/service_editPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_phone"
                android:inputType="phone"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:focusable="false"
                />
            <EditText
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:id="@+id/service_editAddress"
                android:background="@drawable/borderless_react"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_address"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/service_editCity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="Landmark"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/service_editZipcode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_zipcode"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:visibility="gone"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/borderless_react"
                android:id="@+id/service_editEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawablePadding="5dp"
                android:ems="10"

                android:inputType="textEmailAddress"
                android:hint="@string/text_hint_email"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:layout_marginTop="23dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/service_btnsave"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_react"
                android:text="@string/btn_continue"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
